Blockchain 구현 #2  - install crypto-js  - 클래스에 static 메서드 추가: calculateBlockHash

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "devDependencies": {
     "tsc-watch": "^1.0.17",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "crypto-js": "^4.0.0"
   }
 }
